tests/integration/fixtures/laugh/error/존재하지_않는_필드_읽기.laugh
클래스 Robot { }
변수 r = Robot();
출력 r.power;
